# autoVB

./: .gitignore  README.md  UserGuide.md  autoVB.py  nbotest.py  pyproject.toml
82712/: 82712.31  82712.32  82712.33  82712.34  82712.35  82712.36  82712.37  82712.38  82712.39  82712.40  82712.41  82712.fchk  82712.molden
C10H8/: C10H8.31  C10H8.37  C10H8.fchk  C10H8_rhf.fch  C10H8_uhf_uno_asrot2gvb24_s.fch  C10H8nbo.molden  C10H8nbotest.molden
autoVB/: __init__.py  autoVB.py  cli.py  commands.py  constants.py  main.py  utils.py
examples/: example_slurm.sh
examples/82712/: 82712.31  82712.37  82712.autovb  82712.fch  82712.xyz  example_slurm.sh
examples/C4H6/: C4H6.31  C4H6.37  C4H6.autovb  C4H6.chk  C4H6.fch  C4H6.xyz  README.md  example_slurm.sh  mol-241138.mol  orb.tmp  scr-236931.tmp  tmp-236931.geo
examples/unittest/: C4H6.36  actorder.autovb  actorder_rumer.autovb  actorder_seq.autovb  aoa.autovb  aoa_as.autovb  aoa_bond.autovb  aoa_old.autovb  aoa_rumer.autovb  aoi.autovb  as.autovb  blw.autovb  dfvb.autovb  draw.autovb  error_actorder.autovb  error_actorder_aoa.autovb  error_aoa_and_bond.autovb  error_aoa_and_old.autovb  error_aoa_as.autovb  error_bond_first.autovb  error_method.autovb  error_xmi.autovb  not_xmi.autovb  pnbo.autovb  pt2.autovb  threshold.autovb  vbscf.autovb  xmi.xmi
oldfiles/: gmsorbtest.py
src/: cli.py  commands.py  constants.py  main.py  readers.py  rumer_active_graph.py  utils.py  writers.py
src/autoVB/: __init__.py  constants.py  main.py  writers.py
src/autoVB/cli/: __init__.py  autovb.py  autovb_test.py  draw_xmo.py  nbo.py  xmi.py
src/autoVB/draw_xmo/: __init__.py  (+3 more)
src/draw_xmo/: __init__.py  molecule_bond_variant_drawer.py  xmo_drawer_input_converter.py  xmo_output_parser.py
tests/: cli_test.py  constants_test.py  main_test.py  xmo_drawer_input_converter_test.py  xmo_output_parser_test.py
(+11 files in other folders)
