[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autoVB"
version = "0.1.0"
description = "A generator of XMVB input file: AutoVB tools"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyscf",
    "mokit",
    "pyssian",
]

[project.scripts]
autovb-nbo = "autoVB.cli:autovb_nbo"
autovb-xmi = "autoVB.cli:autovb_xmi"
autovb = "autoVB.cli:autovb_main"
autovb-test = "autoVB.cli:autovb_test"

[tool.setuptools]
packages = ["autoVB"]