[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoVB"
version = "0.1.1"
description = "A generator of XMVB input file: AutoVB tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyscf",
    "mokit",
    "pyssian",
]

[project.scripts]
autovb_nbo = "autoVB.cli:autovb_nbo"
autovb_xmi = "autoVB.cli:autovb_xmi"
autovb = "autoVB.cli:autovb_main"
autovb_test = "autoVB.cli:autovb_test"

[tool.setuptools]
packages = ["autoVB"]

[tool.setuptools.package-dir]
autoVB = "src"