[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoVB"
version = "0.1.3"
description = "A generator of XMVB input file: AutoVB tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyscf",
    "mokit",
    "rdkit",
    "pyssian",
]

[project.scripts]
autovb_nbo = "autoVB.cli.nbo:autovb_nbo"
autovb_xmi = "autoVB.cli.xmi:autovb_xmi"
autovb = "autoVB.cli.autovb:autovb_main"
autovb_test = "autoVB.cli.autovb_test:autovb_test"
draw_xmo = "autoVB.cli.draw_xmo:draw_xmo"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
